--- a/Weather/src/main/resources/application.properties
+++ b/Weather/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=aktmzkxm
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
-openweathermap.key=58f8ddef57bcdc1dd280617b01646fe9
+openweathermap.key=
 logging.config=classpath:logback-spring.xml
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
